# bt_miner_skills

./: .gitignore  CLAUDE.md  README.md  SKILL.md  basilica_gpu_training.md  bittensor-rational-miner.md  leaderboard.md  models.md  pyproject.toml  requirements.txt
bt_miner_skills/: __init__.py  cli.py  scaffolder.py
bt_miner_skills/agent/: loop.py  orchestrator.py  tools.py
bt_miner_skills/chain/: fetcher.py
bt_miner_skills/config/: loader.py  subnet_config.py
bt_miner_skills/research/: repo_analyzer.py
bt_miner_skills/skills/: registry.py
bt_miner_skills/testing/: mock_validator.py
orchestrator/: __init__.py  config.py  lifecycle.py  orchestrator.py  snapshot.py  state.py  tools.py
orchestrator/strategies/: __init__.py  base.py  config_search.py  custom.py  evoloop.py  model_selection.py  registry.py
ralph_loop/: RALPH_PROMPT.md  __main__.py  basilica.py  config.py  evidence.py  executor.py  llm.py  loop.py  skill_discovery.py  state.py
subnet_configs/: example_sn1.yaml
subnets/synth/: deploy.py  monitor.py  setup.py  subnet.yaml
subnets/synth/evoloop_task/: prepare.py  task.yaml  train.py
subnets/template/: deploy.py  monitor.py  setup.py  subnet.yaml
subnets/template/evoloop_task/: task.yaml
synth-miner-package/: AGENT_PROMPT.md  README.md  subnet.json
synth-miner-package/skill/: SKILL.md
synth-miner-package/skill/references/: architecture.md  deployment.md  (+4 more)
templates/: miner_base.py.j2
templates/skills/: axon_server.py.j2  hf_model_loader.py.j2  response_cache.py.j2  vllm_inference.py.j2
tests/: test_basilica.py  test_evidence.py
